package com.example.simplerealestate.ui.features.propertylist

/**
 * @author Dang Anh Duc
 * @since 01/12/2025
 */
object PropertyListTestTags {
    const val LOADING_INDICATOR = "property_list_loading_indicator"
    const val ERROR_CONTENT = "property_list_error_content"
    const val EMPTY_CONTENT = "property_list_empty_content"
    const val PROPERTY_LIST = "property_list"
}